--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <!-- Require permissions -->
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.permission.CAMERA" android:required="true"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
